Shortcopy: update the small connect panel. Fix issue with green notice where text was dropping and wrapping the icon on small screens

--- a/scss/organisms/_banners.scss
+++ b/scss/organisms/_banners.scss
@@ -15,6 +15,14 @@
 
 	.jp-banner__button-container {
 		padding: rem( 12px ) 0 0;
+
+		flex-direction: row-reverse;
+		align-items: center;
+		justify-content: flex-end;
+
+		@include minbreakpoint(phablet) {
+			display: flex;
+		}
 	}
 
 	.jp-banner__tos-blurb {
@@ -23,6 +31,13 @@
 		line-height: 1.5;
 		font-size: rem( 11px );
 		color: $gray-dark;
+		@include minbreakpoint(phablet) {
+			margin-left: rem(18px);
+		}
+
+		a {
+			color: inherit;
+		}
 	}
 }
 
@@ -279,10 +294,11 @@
 // end overrides
 
 .jp-wpcom-connect__container-top-text {
-	padding: 15px 15px 25px 15px;
+	padding: 15px 35px 25px 15px;
 	background-color: $green-primary;
 	color: $white;
-	font-weight: 600;
+	display: flex;
+	align-items: baseline;
 
 	svg {
 		width: 24px;
@@ -290,6 +306,9 @@
 		margin-right: 10px;
 		position: relative;
 		top: 7px;
+		@include breakpoint(large-phone) {
+			flex: 1;
+		}
 
 		path {
 			fill: #fff;
@@ -298,6 +317,9 @@
 
 	span {
 		display: inline-block;
+		@include breakpoint(large-phone) {
+			flex: 9;
+		}
 	}
 }
 
@@ -326,10 +348,6 @@
 	position: relative;
 	padding: rem( 32px );
 	z-index: 0;
-
-	@include minbreakpoint(tablet) {
-		padding: rem( 32px ) rem( 32px ) rem( 96px ) rem( 32px );
-	};
 }
 
 .jp-wpcom-connect__content-container p {
@@ -339,24 +357,41 @@
 
 .jp-wpcom-connect__content-container h2 {
 	margin-top: 0;
-	color: #4F748E;
 	line-height: 1.6;
+	display: block;
+	margin-bottom: rem(24px);
 }
 
-
+.jp-wpcom-connect__hide-phone-and-smaller {
+	@include breakpoint(large-phone) {
+		display: none !important;
+	}
+}
 
 .jp-wpcom-connect__content-icon {
-	float: right;
-	margin: 0 rem( 24px ) 0 rem( 36px );
+	margin: 0 rem( 24px );
+	display: flex;
+	flex-direction: column;
+}
 
-	&.jp-connect-illo {
+.jp-connect-illo {
+	img {
+		display: block;
+		margin: 0 auto;
 
-		@include breakpoint(tablet) {
-			float: none;
-			width: 100%;
-			text-align: center;
-			margin: rem( 36px ) 0 rem( 24px );
+		&.jetpack-logo {
+			margin-bottom: rem(36px);
+
+			@include breakpoint(large-phone) {
+				margin-left: 0;
+			}
 		}
+	}
+
+	@include breakpoint(tablet) {
+		width: 100%;
+		margin: rem( 36px ) 0 rem( 24px );
+		display: block;
 	}
 }
 
@@ -364,7 +399,12 @@
 	display: none;
 
 	&.jp__slide-is-active {
-		display: block;
+		display: flex;
+		align-items: flex-start;
+
+		@include breakpoint(tablet) {
+			display: block;
+		}
 	}
 }
 
@@ -378,19 +418,15 @@
 	font-size: rem( 12px );
 }
 
-.jp-wpcom-connect__content-container .jp-banner__button-container {
-	@include minbreakpoint(tablet) {
-		position: absolute;
-		bottom: rem( 8px );
-	};
-}
-
 .jp-banner__button-container .dops-button {
 	margin: rem( 5px ) 0;
 
 	&.is-primary {
 		background: $green-primary;
 		border-color: $green-secondary;
+		padding-left: rem( 24px );
+		padding-right: rem( 24px );
+		flex-shrink: 0;
 
 		&:hover, &:focus {
 			background: $green-secondary;
@@ -398,99 +434,3 @@
 		}
 	}
 }
-
-// Connection Banner Vertical Menu
-.jp-wpcom-connect__vertical-nav {
-	background-color: #F3F6F8;
-
-	@include minbreakpoint(phablet) {
-		flex-direction: column;
-		justify-content: flex-start;
-	};
-
-	@include breakpoint(phablet) {
-		display: none; // hide nav on sm screens. becomes a linear tutorial
-	};
-}
-
-.jp-wpcom-connect__vertical-nav-container {
-	width: rem( 240px );
-}
-
-.vertical-menu__feature-item-label {
-	display: none;
-}
-
-@include minbreakpoint(phablet) {
-
-	.vertical-menu__feature-item {
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		border: none;
-		padding: rem( 12px ) rem( 8px );
-		border-bottom: 1px solid #c8d7e1;
-		border-right: 1px solid #c8d7e1;
-		border-left: 3px solid #F3F6F8;
-		background-color: #F3F6F8;
-		color: #87a6bc;
-		cursor: pointer;
-
-		// trick to hide the bottom border of the last menu item when the menu is the tallest element,
-		// but display the border when the overall container is taller than the menu
-		&:last-of-type {
-			position: relative;
-			top: 1px;
-		}
-	}
-
-	.vertical-menu__feature-item-is-selected {
-		border-left: 3px solid #F3F6F8;
-		border-right: 1px solid #fff;
-		background-color: #fff;
-		color: #2e4453;
-
-		&.jp-feature-intro {
-			border-left: 3px solid #F3F6F8;
-		}
-	}
-
-	.vertical-menu__feature-item-icon {
-		width: rem( 20px );
-		height: rem( 20px );
-		padding: rem( 4px );
-		text-align: center;
-	}
-
-	// svg fill swaps
-	.vertical-menu__feature-item {
-		svg {
-			fill: #86A6BD;
-		}
-	}
-
-	.vertical-menu__feature-item-is-selected {
-
-		svg {
-			fill: #3D596D;
-		}
-
-		&.jp-feature-intro {
-			svg {
-				fill: $green-primary;
-			}
-		}
-
-		&.wp-app-logo {
-			svg path {
-				fill: #3D596D;
-			}
-		}
-	}
-	// end svg fill swaps
-
-	.vertical-menu__feature-item-label {
-		display: block;
-		padding: rem( 8px );
-	}
-};
